tests/vrml97/good/proto-containment-2-deep.wrl
#VRML V2.0 utf8
PROTO Outer [] {
  PROTO Inner0 [] {
    PROTO Inner1 [] {
      Group {}
    }
    Inner1 {}
  }
  Inner0 {}
}
Outer {}
