tests/vrml97/bad/route-sfint32-to-sfbool.wrl
#VRML V2.0 utf8
PROTO FromNode [ eventOut SFInt32 val_changed ] { Group {} }
PROTO ToNode [ eventIn SFBool set_val ] { Group {} }
DEF FROM-NODE FromNode {}
DEF TO-NODE ToNode {}
ROUTE FROM-NODE.val TO TO-NODE.val
